<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_30sdp"
    android:paddingTop="@dimen/_10sdp"
    android:layout_gravity="center"
    tools:context=".Login"
    android:background="@drawable/home">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="IntelliChat"
        android:textColor="@color/white"
        android:textSize="@dimen/_45sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_154sdp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FF3496FF"
        android:textSize="@dimen/_27sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/app_name"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <EditText
        android:id="@+id/emaillogin"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_38sdp"
        android:layout_height="@dimen/_38sdp"
        android:paddingStart="@dimen/_15sdp"
        android:textColor="@color/black"
        android:background="@drawable/fields"
        android:hint="@string/email"
        android:textColorHint="#FF48454E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordlogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_43sdp"
        android:layout_marginTop="@dimen/_23sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emaillogin"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordlogin0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fields"
            android:paddingStart="@dimen/_15sdp"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/_121sdp"
        android:layout_marginTop="@dimen/_31sdp"
        android:layout_marginEnd="@dimen/_120sdp"
        android:background="@drawable/button"
        android:paddingHorizontal="@dimen/_23sdp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordlogin"/>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="@dimen/_23sdp"
        android:layout_height="@dimen/_23sdp"
        android:padding="@dimen/_2sdp"
        android:visibility="visible"
        android:indeterminateDrawable="@drawable/progress_bar"
        app:layout_constraintBottom_toBottomOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toTopOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/register_now"
        android:textColor="#FF3496FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>